# stream-owl

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: stream_bench.rs
examples/: priority.rs  stream.rs
src/: http_client.rs  lib.rs  manager.rs  network.rs  reader.rs  retry.rs  store.rs  stream.rs  target.rs  testing.rs  util.rs  vecdeque.rs
src/http_client/: connection.rs  error.rs  headers.rs  io.rs  read.rs  response.rs  size.rs
src/http_client/connection/: throttle_io.rs
src/manager/: builder.rs  config.rs  handle.rs  stream.rs  task.rs
src/manager/stream/: config.rs
src/manager/task/: bandwidth.rs  race_results.rs
src/manager/task/bandwidth/: allocation.rs  debug_format.rs  divide.rs  investigate.rs  test.rs  update.rs
src/manager/task/bandwidth/divide/: tests.rs
src/manager/task/bandwidth/update/: investigate.rs
src/reader/: prefetch.rs
src/store/: capacity.rs  disk.rs  limited_mem.rs  migrate.rs  range_watch.rs  unlimited_mem.rs
src/store/disk/: progress.rs
src/store/migrate/: cancel.rs  range_list.rs
src/store/unlimited_mem/: range_store.rs
src/stream/: builder.rs  drop.rs  reporting.rs  task.rs
src/stream/task/: race_results.rs  retry.rs
src/testing/: pausable_server.rs  static_file_server.rs
src/testing/pausable_server/: conn.rs
src/util/: overflowable_mpsc.rs  vecdeque.rs
stream-owl-test-support/: Cargo.toml
stream-owl-test-support/src/: lib.rs  pausable_server.rs  static_file_server.rs  tracing_setup.rs
tests/: bandwidth.rs  disk_store.rs  migration.rs  pause.rs  simple.rs  unreliable_connection.rs
